--- a/action.html
+++ b/action.html
@@ -52,9 +52,8 @@
     }
 
     .navbar-brand {
-    padding: 0; /* Remove default padding */
-    margin-right: 15px; /* Add margin to separate the logo from the edge of the container */
-  }
+      transition: none;
+    }
 
     .landing-video {
       max-height: 200px;
@@ -75,54 +74,42 @@
       box-sizing: border-box;
     }
 
- .navbar-brand img {
-    max-height: 40px; /* Adjust the height as needed */
-    margin-right: 10px; /* Add some space between the logo and text */
-  }
-
- .navbar {
-    height: 60px; /* Adjust the height as needed */
-  }
-
-  body {
-        display: flex;
-        flex-direction: column;
-        min-height: 100vh;
-        margin: 0; /* Remove default body margin */
-    }
-
-    .top-container {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 10px;
-        background-color: #1781eb;
-        color: white;
-    }
-
-    .navbar-brand,
-    .navbar-nav {
-        margin: 0; /* Remove default margin for the logo and navbar buttons */
-    }
   </style>
 <body>
 
- 
-    <div class="top-container">
-        <a class="navbar-brand" href="#"><img src="https://cdn3.iconfinder.com/data/icons/logos-and-brands-adobe/512/272_Raspberry_Pi-512.png" alt="Искусство лого">Constantine electronics.inc</a>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link nav-link-custom glare-effect rounded" href="main.html" style="background-color:#1781eb; color: white;">Главная</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link nav-link-custom glare-effect rounded" href="action.html" style="background-color:#1781eb; color: white;">Акции</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link nav-link-custom glare-effect rounded" href="form_submission_page.html" style="background-color: #1781eb; color: white;">Обратная связь</a>
-                </li>
-            </ul>
-            <div class="d-lg-none">
+  <nav class="navbar navbar-expand-lg navbar-dark">
+    <div class="container">
+      <a class="navbar-brand" href="#"><img src="https://cdn3.iconfinder.com/data/icons/logos-and-brands-adobe/512/272_Raspberry_Pi-512.png" alt="Искусство лого">Constantine electronics.inc</a>
+      <button class="navbar-toggler glare-effect" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link nav-link-custom glare-effect rounded" href="main.html" style="background-color:#1781eb; color: white;">Главная</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link nav-link-custom glare-effect rounded" href="action.html" style="background-color:#1781eb; color: white;">Акции</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link nav-link-custom glare-effect rounded" href="form_submission_page.html" style="background-color: #1781eb; color: white;">Обратная связь</a>
+          </li>
+        </ul>
+        <div class="d-lg-none">
+          <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="responsiveDropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Меню
+            </button>
+            <div class="dropdown-menu" aria-labelledby="responsiveDropdownMenuButton">
+              <a class="dropdown-item" href="main.html">Главная</a>
+              <a class="dropdown-item" href="action.html">Акции</a>
+              <a class="dropdown-item" href="form_submission_page.html">Обратная связь</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </nav>
 
     <div class="p-5 text-center parallax-section rounded glare-effect">
         <h2 class="display-4">Отдел акций</h2>
