--- a/action.html
+++ b/action.html
@@ -78,7 +78,7 @@
         display: flex;
         flex-direction: column;
         min-height: 100vh;
-        margin: 0; /* Remove default body margin */
+        margin: 0;
     }
 
     .top-container {
@@ -88,13 +88,18 @@
         padding: 10px;
         background-color: #1781eb;
         color: white;
+        margin-top: 0; /* Ensure no top margin for the top-container */
+    }
+
+    .navbar {
+        margin-bottom: 0; /* Ensure no bottom margin for the navbar */
     }
 
     .navbar-brand,
     .navbar-nav {
-        margin: 0; /* Remove default margin for the logo and navbar buttons */
+        margin: 0;
+        padding: 0;
     }
-
   </style>
 <body>
 
