--- a/action.html
+++ b/action.html
@@ -74,11 +74,12 @@
       box-sizing: border-box;
     }
 
-      body {
+    body {
         display: flex;
         flex-direction: column;
         min-height: 100vh;
         margin: 0;
+        padding: 0;
     }
 
     .top-container {
@@ -88,11 +89,11 @@
         padding: 10px;
         background-color: #1781eb;
         color: white;
-        margin-top: 0; /* Ensure no top margin for the top-container */
+        margin-top: 0;
     }
 
     .navbar {
-        margin-bottom: 0; /* Ensure no bottom margin for the navbar */
+        margin-bottom: 0;
     }
 
     .navbar-brand,
