--- a/action.html
+++ b/action.html
@@ -89,7 +89,7 @@
         padding: 10px;
         background-color: #1781eb;
         color: white;
-        margin-top: 0;
+        margin-top: -20px; /* Adjust this value as needed */
     }
 
     .navbar {
