--- a/action.html
+++ b/action.html
@@ -89,7 +89,7 @@
         padding: 10px;
         background-color: #1781eb;
         color: white;
-        margin-top: -20px; /* Adjust this value as needed */
+        margin-top: -20px;
     }
 
     .navbar {
@@ -100,6 +100,10 @@
     .navbar-nav {
         margin: 0;
         padding: 0;
+    }
+
+    .navbar-nav {
+        margin-right: 20px; /* Adjust this value as needed */
     }
   </style>
 <body>
