--- a/action.html
+++ b/action.html
@@ -103,8 +103,9 @@
     }
 
     .navbar-nav {
-        margin-right: auto; /* Move the navbar-nav to the right as much as possible */
+        margin-left: auto; /* Move the navbar-nav to the right */
     }
+
   </style>
 <body>
 
