--- a/action.html
+++ b/action.html
@@ -73,7 +73,6 @@
       text-align: center;
       box-sizing: border-box;
     }
-
     body {
         display: flex;
         flex-direction: column;
@@ -103,9 +102,13 @@
     }
 
     .navbar-nav {
-        margin-left: auto; /* Move the navbar-nav to the right */
-        margin-right: 75px; /* Adjust this value as needed */
+        margin-left: auto;
     }
+
+    .navbar-nav .nav-item {
+        margin-right: 20px; /* Adjust this value as needed */
+    }
+
 
   </style>
 <body>
