--- a/action.html
+++ b/action.html
@@ -73,7 +73,7 @@
       text-align: center;
       box-sizing: border-box;
     }
-    body {
+     body {
         display: flex;
         flex-direction: column;
         min-height: 100vh;
@@ -102,11 +102,8 @@
     }
 
     .navbar-nav {
-        margin-left: auto;
-    }
-
-    .navbar-nav .nav-item {
-        margin-right: 20px; /* Adjust this value as needed */
+        margin-left: auto; /* Move the navbar-nav to the right */
+        margin-right: 50px; /* Adjust this value as needed */
     }
 
 
