--- a/form_submission_page.html
+++ b/form_submission_page.html
@@ -106,7 +106,7 @@
         <input type="text" name="from_name" id="from_name" class="form-control" style="border-radius: 0.25rem; display: inline-block;">
       </div>
       <div class="field">
-        <label for="to_name" style="color: white; font-size: 1.5rem;">Введите почту, указанную в контактах на главной странице:</label>
+        <label for="to_name" style="color: white; font-size: 1.5rem;">Введите почту, указанную в контактах:</label>
         <input type="text" name="to_name" id="to_name" class="form-control" style="border-radius: 0.25rem; display: inline-block;">
       </div>
       <div class="field">
