--- a/main.html
+++ b/main.html
@@ -64,12 +64,44 @@
 
     .nav-link-custom {
       width: 100%;
-      min-width: 120px;
+      min-width: 130px;
       display: flex;
       align-items: center;
       justify-content: center;
       text-align: center;
       box-sizing: border-box;
+    }
+
+      body {
+        display: flex;
+        flex-direction: column;
+        min-height: 100vh;
+        margin: 0;
+        padding: 0;
+    }
+
+    .top-container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 10px;
+        background-color: #1781eb;
+        color: white;
+        margin-top: -20px;
+    }
+
+    .navbar {
+        margin-bottom: 0;
+    }
+
+    .navbar-brand,
+    .navbar-nav {
+        margin: 0;
+        padding: 0;
+    }
+
+    .navbar-nav {
+        margin-left: auto; /* Move the navbar-nav to the right */
     }
 
   </style>
