--- a/main.html
+++ b/main.html
@@ -72,7 +72,18 @@
       box-sizing: border-box;
     }
 
-      body {
+    .nav-link-custom {
+      height: 50px;
+      width: 100%;
+      min-width: 130px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      box-sizing: border-box;
+    }
+    
+    body {
         display: flex;
         flex-direction: column;
         min-height: 100vh;
