--- a/form_submission_page.html
+++ b/form_submission_page.html
@@ -70,6 +70,11 @@
     .form-container input[type="text"] {
       font-size: 1.2rem;
     }
+
+    .nav-link {
+  width: 100px; /* Adjust the width as needed */
+  text-align: center; /* Center the text within the button */
+}
   </style>
 </head>
 <body>
