--- a/form_submission_page.html
+++ b/form_submission_page.html
@@ -107,6 +107,20 @@
   width: 100%;
   text-align: center;
 }
+
+.nav-link {
+  min-width: 120px; /* Set a minimum width for the buttons */
+  font-size: 1.8rem; /* Increase the font size for the buttons */
+}
+
+/* Apply the same transition and hover effect to the nav-links */
+.nav-link {
+  transition: transform 0.3s ease-in-out;
+}
+
+.nav-link:hover {
+  transform: scale(1.1);
+}
   </style>
 </head>
 <body>
