--- a/form_submission_page.html
+++ b/form_submission_page.html
@@ -118,8 +118,14 @@
   transition: transform 0.3s ease-in-out;
 }
 
-.nav-link:hover {
+.btn-navbar:hover {
   transform: scale(1.1);
+}
+
+.btn-navbar {
+  min-width: 120px;
+  font-size: 1.8rem;
+  transition: transform 0.3s ease-in-out;
 }
   </style>
 </head>
@@ -134,18 +140,19 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link glare-effect rounded btn btn-primary" href="main.html" style="background-color: #1781eb; color: white;">Главная</a>
+          <a class="nav-link glare-effect rounded btn-navbar" href="main.html">Главная</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link glare-effect rounded btn btn-primary" href="action.html" style="background-color: #1781eb; color: white;">Акции</a>
+          <a class="nav-link glare-effect rounded btn-navbar" href="action.html">Акции</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link glare-effect rounded btn btn-primary" href="form_submission_page.html" style="background-color: #1781eb; color: white;">Обратная связь</a>
+          <a class="nav-link glare-effect rounded btn-navbar" href="form_submission_page.html">Обратная связь</a>
         </li>
       </ul>
     </div>    
   </div>
 </nav>
+
 
   <div class="p-5 text-center parallax-section rounded glare-effect">
     <h2 class="display-4">Форма обратной связи</h2>
