--- a/form_submission_page.html
+++ b/form_submission_page.html
@@ -126,28 +126,19 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-dark">
-  <div class="container">
-    <a class="navbar-brand" href="#"><img src="https://cdn3.iconfinder.com/data/icons/logos-and-brands-adobe/512/272_Raspberry_Pi-512.png" alt="Искусство лого">Constantine electronics.inc</a>
-    <button class="navbar-toggler glare-effect" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto">
+<div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link glare-effect rounded btn-navbar" href="main.html">Главная</a>
+            <a class="nav-link glare-effect rounded w-100" href="main.html" style="background-color: #1781eb; color: white;">Главная</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link glare-effect rounded btn-navbar" href="action.html">Акции</a>
+            <a class="nav-link glare-effect rounded w-100" href="action.html" style="background-color: #1781eb; color: white;">Акции</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link glare-effect rounded btn-navbar" href="form_submission_page.html">Обратная связь</a>
+            <a class="nav-link glare-effect rounded w-100" href="form_submission_page.html" style="background-color: #1781eb; color: white;">Обратная связь</a>
         </li>
-      </ul>
-    </div>    
-  </div>
-</nav>
-
+    </ul>
+</div>
 
   <div class="p-5 text-center parallax-section rounded glare-effect">
     <h2 class="display-4">Форма обратной связи</h2>
