--- a/form_submission_page.html
+++ b/form_submission_page.html
@@ -70,6 +70,49 @@
     .form-container input[type="text"] {
       font-size: 1.2rem;
     }
+
+        .nav-link-custom {
+      height: 50px;
+      width: 100%;
+      min-width: 130px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      box-sizing: border-box;
+    }
+    
+    body {
+        display: flex;
+        flex-direction: column;
+        min-height: 100vh;
+        margin: 0;
+        padding: 0;
+    }
+
+    .top-container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 10px;
+        background-color: #1781eb;
+        color: white;
+        margin-top: -20px;
+    }
+
+    .navbar {
+        margin-bottom: 0;
+    }
+
+    .navbar-brand,
+    .navbar-nav {
+        margin: 0;
+        padding: 0;
+    }
+
+    .navbar-nav {
+        margin-left: auto; /* Move the navbar-nav to the right */
+    }
   </style>
 </head>
 <body>
