--- a/form_submission_page.html
+++ b/form_submission_page.html
@@ -113,6 +113,12 @@
     .navbar-nav {
         margin-left: auto; /* Move the navbar-nav to the right */
     }
+
+     /* Add transition effect to buttons */
+    .navbar-nav .nav-link-custom:hover {
+      transform: scale(1.1);
+      transition: transform 0.3s ease-in-out;
+    }
   </style>
 </head>
 <body>
